plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.80'
}

version = "$mod_version+mc-$minecraft_version-$mod_loader"
group = mod_group_id

repositories {
    mavenLocal()
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort
    maven { url = "https://maven.blamejared.com/" } // JEI
    maven { url = "https://maven.terraformersmc.com/" } // EMI
    maven { url = "https://maven.shedaniel.me/" } // REI
    maven { url = "https://maven.architectury.dev/" }
    maven { url = "https://maven.theillusivec4.top/" } // Curios
    maven {
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    } // JADE
    maven {
        name = "RyanHCode Maven"
        url = "https://maven.ryanhcode.dev/releases"
    }
    maven { url = "https://maven.squiddev.cc" } // CC: Tweaked
    maven { url = "https://api.modrinth.com/maven" }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath(), '--existing-mod', 'create'
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    implementation("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    implementation("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
    compileOnly "dev.engine-room.flywheel:flywheel-neoforge-api-${minecraft_version}:${flywheel_version}"
    runtimeOnly "dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}"
    implementation "com.tterrag.registrate:Registrate:${registrate_version}"

    // Compile against the Curios API artifact
    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}:api"

    // JEI
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
    // EMI
    compileOnly "dev.emi:emi-neoforge:${emi_version}"
    // REI
    compileOnly "me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}"
    compileOnly "curse.maven:architectury-api-419699:${architectury_id}"

    switch (recipe_viewer) {
        case "JEI": {
            runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"
            runtimeOnly "curse.maven:configured-457570:${configured_id}"
        }; break
        case "EMI": {
            runtimeOnly "dev.emi:emi-neoforge:${emi_version}"
            runtimeOnly "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}" // For mechanical crafter recipes
        }; break
        case "REI": {
            runtimeOnly "me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}"
            runtimeOnly "curse.maven:architectury-api-419699:${architectury_id}"
            runtimeOnly "curse.maven:cloth-config-348521:5729127"
        }; break
    }

    // Vanilla Backport
    implementation "curse.maven:vanillabackport-417430:${vanillabackport_id}"
    runtimeOnly "curse.maven:platform-997634:${platform_id}"

    // Every Compat
    compileOnly "curse.maven:every-compat-628539:${everycomp_version}"
    compileOnly "curse.maven:selene-499980:${moonlight_version}"

    // Construction Stick
    compileOnly "curse.maven:construction-sticks-1156098:7687867" // 1.3.0

    // Sable
    compileOnly "dev.ryanhcode.sable-companion:sable-companion-common-${minecraft_version}:${sable_companion_version}"
    compileOnly "dev.ryanhcode.sable:sable-neoforge-${minecraft_version}:${sable_version}"

    // Waila / Jade
    implementation "maven.modrinth:jade:${jade_version}"

    // Other mods to include at runtime during development/testing
    runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    runtimeOnly "maven.modrinth:jade-addons-forge:${jadeaddon_version}"
    runtimeOnly "curse.maven:carry-on-274259:7393892"
    runtimeOnly "curse.maven:catalogue-459701:6926815"
    runtimeOnly "curse.maven:xaeros-world-map-317780:7598481"
    runtimeOnly "curse.maven:xaeros-minimap-263420:7598595"
    runtimeOnly "curse.maven:appleskin-248787:7854442"
    runtimeOnly "curse.maven:irisshaders-455508:6661598"
    runtimeOnly "curse.maven:sodium-394468:6382651"

    // Create Aeronautics
    runtimeOnly "dev.ryanhcode.sable:sable-neoforge-${minecraft_version}:${sable_version}"
    runtimeOnly "dev.eriksonn.aeronautics:aeronautics-neoforge-${minecraft_version}:${aeronautics_version}"
    runtimeOnly "dev.simulated_team.simulated:simulated-neoforge-${minecraft_version}:${simulated_version}"
    runtimeOnly "dev.ryanhcode.offroad:offroad-neoforge-${minecraft_version}:${offroad_version}"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description,
                             mod_url                : mod_url,
                             mod_icon               : mod_icon]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.processResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
